<resources>
    <string name="app_name">PpMobileSensor</string>
    <string name="connect_to_device">Connect to %s</string>
    <string name="start_movement_stream">Start Movement Stream</string>
    <string name="disconnect_from_device">Disconnect from %s</string>
    <string name="stop_movement_stream">Stop Movement Stream</string>
    <string name="sampling_rate">Sampling rate</string>
    <string name="resolution">Resolution</string>
    <string name="range">Range</string>
    <string name="channels">Channels</string>
    <string name="ok">OK</string>
    <string name="title">Accelerations vs. Time</string>
    <string name="range_title">Acc m^2/ms</string>
    <string name="domain_title">Time /ms</string>
</resources>