<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/white" />

        <Button
            android:id="@+id/connect_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect_to_device" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/white"/>

        <Button
            android:id="@+id/movement_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_movement_stream" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_X_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/view_plot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttons_container">

        <TextView
            android:id="@+id/view_acc_X"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"
            android:textColor="#C00000"
            android:textSize="30sp"
            tools:text="100" />
    </LinearLayout>

    <com.androidplot.xy.XYPlot
        android:id="@+id/view_plot"
        style="@style/FullScreenGraph"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="346dp"
        app:backgroundColor="@color/colorAccent"
        app:graphBackgroundColor="@color/colorAccent"
        app:graphMarginBottom="20dp"
        app:graphMarginLeft="24dp"
        app:graphMarginRight="6dp"
        app:graphMarginTop="20dp"
        app:gridBackgroundColor="@color/colorAccent"
        app:gridInsetLeft="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lineLabels="left|bottom"
        app:rangeTitle="@string/range_title"
        app:rangeTitleTextColor="@android:color/black"
        app:rangeTitleTextSize="12dp"
        app:domainTitle="@string/domain_title"
        app:domainTitleTextColor="@android:color/black"
        app:domainTitleTextSize="12dp"
        app:title="@string/title"
        app:titleTextColor="@android:color/black"
        app:titleTextSize="16dp"
        app:renderMode="use_background_thread" />

</androidx.constraintlayout.widget.ConstraintLayout>